public/css/style.css
/* STYLING FOR OVER ALL LOOK OF SITE ~ MASTER.MASTER.BLADE.PHP */
body {
  background-image: url('Turf.jpg');
  font-family: 'Graduate', cursive;
}

.container {
  padding: 30px;
}

/* STYLING FOR NAVBAR ~ PARTIALS.NAVBAR.BLADE.PHP */

.headerFont {
  font-family: 'Graduate', cursive;
  font-size: 40px;
}

.font {
  font-family: 'Graduate', cursive;
  color: #F4ECDB !important;
}

.paddingNav {
  padding-top: 90px;
}

/* STYLING FOR HOMEPAGE ~ SITE.HOME.BLADE.PHP */

.mdl-layout__content {
  display: block !important;
  height: 100%;
  overflow: hidden;
  padding: 15px;
}

.demo-card-square2.mdl-card2 {
  width: 350px;
  height: 511px;
  margin-top: 55px;
  border-radius: 2%;
  z-index: -1;
  -ms-transform: rotate(-15deg);
  -webkit-transform: rotate(-15deg);
  transform: rotate(-15deg);
  float: left;
  position: relative;
  left: 418px;
}

.demo-card-square2 > .mdl-card__title2 {
  background: url('cracker2.jpg');
  width: 350px;
  height: 511px;
}

.demo-card-square3.mdl-card3 {
  width: 350px;
  height: 511px;
  margin-top: 55px;
  z-index: -2;
  -ms-transform: rotate(15deg);
  -webkit-transform: rotate(15deg);
  transform: rotate(15deg);
  float: left;
  position: relative;
  right: 180px;
}

.demo-card-square3 > .mdl-card__title3 {
  background: url('cracker1.jpg');
  width: 350px;
  height: 511px;
}

.demo-card-square.mdl-card {
  width: 400px;
  height: 561px;
  margin: 0 auto;
  margin-top: 10px;
  background-color: #F4ECDB;
  border-radius: 2%;
}

.demo-card-square > .mdl-card__title {
  color: #ffffff;
  background: url('base2.jpg');
  width: 400px;
  height: 561px;
}

.cardFont {
  font-family: 'Graduate', cursive;
  font-size: 23px;
  color: #313131;
  text-align: center;
}

.butts1 {
  margin-left: 25%;
  margin-bottom: 5px;
  font-family: 'Graduate', cursive;
}

.butts2 {
  margin-right: 10px;
  font-family: 'Graduate', cursive;
}

.mdl-layout__header .mdl-layout__drawer-button i {
  color: #f4ecdb;
}

.material-icons {
  color: #f4ecdb;
}

/* STYLING FOR BROWSE PAGE ~ SITE.BROWSE.BLADE.PHP */

a {
  text-decoration: none;
  color: blue;
}

.linkPadding {
  padding-bottom: 5px;
}

.toTheLeft {
  float: left;
  width: 60%;
}

.toTheRight {
  width: 39%;
  float: left;
}

h3 {
  text-align: center;
  font-family: 'Graduate', cursive;
}

.grow { transition: all .2s ease-in-out; }
.grow:hover { transform: scale(1.05); }

.demo-card-image.mdl-card {
  width: 205px;
  height: 332px;
  background: url('basetile.jpg') center / cover;
  border-radius: 25px;
}

.demo-card-image > .mdl-card__actions {
  height: 52px;
  padding: 16px;
  background: #263238;
  opacity: 0.9;
}

.demo-card-image__filename {
  margin: auto;
  font-size: 17px;
  font-weight: 700;
  color: #f4ecdb;
}

.demo-card-image1.mdl-card {
  width: 205px;
  height: 332px;
  background: url('basketballTile.jpg') center / cover;
  border-radius: 25px;
}

.demo-card-image1 > .mdl-card__actions {
  height: 52px;
  padding: 16px;
  background: #263238;
  opacity: 0.9;
}

.demo-card-image2.mdl-card {
  width: 205px;
  height: 332px;
  background: url('footballTile.jpg') center / cover;
  border-radius: 25px;
}

.demo-card-image2 > .mdl-card__actions {
  height: 52px;
  padding: 16px;
  background: #263238;
  opacity: 0.9;
}

.demo-card-image3.mdl-card {
  width: 205px;
  height: 332px;
  background: url('sportscardTile.jpg') center / cover;
  border-radius: 25px;
}

.demo-card-image3 > .mdl-card__actions {
  height: 52px;
  padding: 16px;
  background: #263238;
  opacity: 0.9;
}

.demo-card-image4.mdl-card {
  width: 205px;
  height: 332px;
  background: url('gamingcardsTile.jpg') center / cover;
  border-radius: 25px;
}

.demo-card-image4 > .mdl-card__actions {
  height: 52px;
  padding: 16px;
  background: #263238;
  opacity: 0.9;
}

.demo-card-image5.mdl-card {
  width: 205px;
  height: 332px;
  background: url('otherTile.jpg') center / cover;
  border-radius: 25px;
}

.demo-card-image5 > .mdl-card__actions {
  height: 52px;
  padding: 16px;
  background: #263238;
  opacity: 0.9;
}

.dataBlock {
  padding-right: 30px;
  border: 2px solid black;
  padding: 15px;
  background: #F4ECDB;
  border-radius: 10%;
  min-height: 320px;
  font-family: 'Graduate', cursive;
}

.dataBlockFont {
  font-family: 'Graduate', cursive;
  font-size: 20px;
}

.dataBlockPadding {
  padding: 20px;
}

/* STYLING FOR REGISTER/LOGIN PAGES ~ AUTH.REGISTER/LOGIN.BLADE.PHP */

.unauthorizedUser {
height: 30px;
padding-top: 10px;
font-size: 20px;
background-color: red;
text-align: center;
overflow: visible;
margin-bottom: 20px;
}

.demo-card-square2 {
  margin: auto;
  justify-content: center;
  width: 550px;
  height: 400px;
  border-radius: 15px;
  background: #F4ECDB;
  font-family: 'Graduate', cursive;
  text-align: center;
}

.LoginFont {
 font-weight: bold;
 font-size: 25px;
}

.SecondType {
  font-weight: bold;
  font-size: px;
}

.butts4 {
  margin-right: 10px;
  font-family: 'Graduate', cursive;
  color: #F4ECDB;
}

/* STYLING FOR SET PAGE ~ RESOURCE.SET.INDEX.BLADE.PHP */

.set_header {
  width: 100%;
}

.containment {
  display: block;
  margin-left: 15%;
}

.setCount {
  margin-left: 15%;
  font-size: 20px;
}

.checklist {
  width: 50%;
  float: left;
}

.isChecked {
  border-width: .5px !important;
  border-style: solid !important;
  background-color: #B0A897 !important;
}

table {
  border: black;
  border-style: solid black
}

tr {
  border-width: .5px;
  border-style: solid;
  background-color: #F4ECDB;
}

th, td {
  border-style: solid;
  border-width: 1px;
  padding: 5px;
  margin-right: 5px;
  text-align: center;
  font-family: 'Graduate', cursive;
  font-size: 15px;
}

thead {
  text: bolder;
  font-size: 20px;
}

/* .check {
  pointer-events: none;
} */

.tabcontent {
  position: fixed; /* ATTENTION */
  top: 226px; /* ATTENTION */
  right: -50px; /* ATTENTION */
  float: left;
  width: 40%;
  display: none;
  margin-right: 10%;
}

.sticky {
  position: -webkit-sticky; /* Safari */
  position: sticky;
  top: 0;
}

.search_container { /*ATTENTION!!!*/
  display:flex;
  flex-direction:row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.search_container img { /*ATTENTION!!!*/
  width:100%;
  height:auto;
}

.search_container div { /*ATTENTION!!!*/
  width: 18%;
  padding: 30px;
}

.card_container {
  position: relative;
  margin-left: 25%;
  width: 80%; /* ATTENTION!!!! */
}

.card_container img {
  width: 100%; /* ATTENTION!!!! */
  height: 100%; /* ATTENTION!!!! */
}

.card_container2 {
  /* position: relative; */
  margin-left: 25%;
  width: 850px;
}

.theCard {
    border: 2px solid black;
    border-radius: 2%;
}

h5 {
  text-align: center;
  font-family: 'Graduate', cursive;
}
h6 {
  text-align: center;
  font-family: 'Graduate', cursive;
  font-size: 50px;
}

/* .backgroundForCard {
  height: 400px;
  width: 300px;
} */

/* .clearfix::after {
  content: "";
  clear: both;
  display: table;
} */


/* STYLING FOR THE PROFILE PAGE - SITE.PROFILE.BLADE.PHP */
.buttsProfile {
  font-family: 'Graduate', cursive;

  margin-top: 315px;
  margin-left: 50px;
}

.profileLeft{
  width: 50%;
  float: left;
}

.profileRight {
  width: 50%;
  float: left;
}

.collection_stats {
  float: left;
  width: 45%;
  margin-left: 50px;
  margin-top: 30px;
}

.tableStyle {
  border: solid 2px black;
  width: 800px;
}

.tablinks {
  font-size: 17px;
}

.tableHeading {
  font-size: 19px;
}

.showsets {
  margin-top: 30px;
  margin-left: 40px;
  width: 650px;
  border: solid 2px black;
  background-color: #F4ECDB;
  display: none;
  font-size: 17px;
  padding-right: 20px;
  padding-left: 20px;
  padding-bottom: 20px;
}

hr {
  height: 2px;
  background: #000000;

}

.greeting {
    font-size: 30px;
}

.textPadding {
  padding-top: 5px;
}

/* STYLING FOR THE CONTACT PAGE - SITE.CONTACT.BLADE.PHP */
.contactBlock {
  width: 800px;
  height: 200px;
  border: 2px solid black;
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 40px;
  background: #f4ecdb;
  border-radius: 10%;
  font-family: 'Graduate', cursive;
  font-size: 25px;
  text-align: center;
  margin: auto;
  margin-top: 80px;
}

.contactBlockFont {
  font-family: 'Graduate', cursive;
  font-size: 40px;
  text-align: center;
  padding-bottom: 20px;
}

/*  MISC OR UNUSED OR CAN'T FIND */
/*

.butts3 {
  margin-right: 600px;
  margin-left: 600px;
}

.inTheCenter {
  float:none;
}
*/
.logIn {
 color: #B07F67;
 font-family: Graduate;
 font-size: 18px;
}
/*
.haveOnSet {
  text-align: left;
}

.badge {
  font-style: italic;
  font-size: 6px;
}

.myCollectionBaseball {
  background-color: #f4ecdb !important;
  height: 20px;
  width: 20px;
  font-size: 10px;
  z-index: -1;
  position:absolute;
}

*/

